# juno-openai

./: README.md  demo-playbook.md
.github/workflows/: deploy.yaml
app/: .gitignore  README.md  docker-compose.yml  juno.config.ts  juno.dev.config.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
app/scripts/: build.csp.mjs
app/src/: app.d.ts  app.html
app/src/lib/components/core/: Header.svelte  Juno.svelte  Prompt.svelte  SignIn.svelte  SignOut.svelte
app/src/lib/components/icons/: IconBrush.svelte  IconCamera.svelte  IconChevronDown.svelte  IconClose.svelte  IconDone.svelte  IconGitHub.svelte  IconJuno.svelte  IconLogin.svelte  IconLogout.svelte  IconOpenAI.svelte  IconPencil.svelte  IconSave.svelte
app/src/lib/constants/: app.constants.ts
app/src/lib/derived/: asset.derived.ts  busy.derived.ts  user.derived.ts
app/src/lib/services/: auth.services.ts
app/src/lib/stores/: app.stores.ts  busy.store.ts  toasts.store.ts  user.store.ts
app/src/lib/styles/: global.scss
app/src/lib/types/: drawable.ts  juno.ts  pencil.ts  prompt.ts
app/src/lib/utils/: canvas.utils.ts  date.utils.ts  enum.utils.ts  format.utils.ts  touch.utils.ts  utils.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/satellite/: Cargo.toml  satellite_extension.did
app/src/satellite/src/: doc.rs  lib.rs  request.rs  response.rs
app/static/: manifest.webmanifest
proxy/: .firebaserc  .gitignore  README.md
proxy/functions/: .eslintrc.js  .prettierrc  package-lock.json  package.json
proxy/functions/src/: index.ts
(+27 files in other folders)
