[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.1"
serde = "1.0.190"
serde_cbor = "0.11.2"
junobuild-satellite = {path="/Users/daviddalbusco/projects/juno/juno/src/libs/satellite"}
junobuild-macros = "0.0.1"
junobuild-utils = "0.0.1"
serde_json = "1.0.114"

